--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,21 @@ ignore = ["E203"]
 [tool.ruff.per-file-ignores]
 "tests/*" = ["S101"]
 
+[tool.flake8]
+max-line-length = 88
+exclude = [
+    ".git",
+    "__pycache__",
+    ".venv",
+    "venv",
+    "build",
+    "dist"
+]
+per-file-ignores = [
+    "__init__.py: F401"
+]
+max-complexity = 10
+
 [tool.black]
 line-length = 88
 target-version = ['py38']
