--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,8 @@ jobs:
     - name: Lint with flake8
       run: |
         python -m flake8 --version
-        python -m flake8 app/ tests/ --show-source --statistics
+        # Only check for critical errors in the app directory
+        python -m flake8 app/ --select=E9,F63,F7,F82 --show-source --statistics
     
     - name: Lint with ruff
       run: |
