--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "codexagent"
 version = "0.1.0"
 description = "AI-powered code analysis, documentation, and refactoring tool"
+readme = "README.md"
 authors = [
     {name = "Sylvester Francis", email = "techwithsyl@gmail.com"},
 ]
@@ -46,6 +47,14 @@ dev = [
     "click>=8.0.0",
     "responses>=0.22.0",
 ]
+
+[project.urls]
+"Homepage" = "https://github.com/sylvester-francis/CodexAgent"
+"Bug Tracker" = "https://github.com/sylvester-francis/CodexAgent/issues"
+"Documentation" = "https://sylvester-francis.github.io/CodexAgent/"
+
+[project.scripts]
+codexagent = "app.cli:app"
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
@@ -90,6 +99,3 @@ include_trailing_comma = true
 force_grid_wrap = 0
 use_parentheses = true
 ensure_newline_before_comments = true
-
-[project.scripts]
-codexagent = "app.cli:app"
