--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,9 +54,14 @@ jobs:
       run: |
         pytest --cov=app --cov-report=term
     
+    - name: Install package in development mode
+      run: |
+        pip install -e .[dev]
+
     - name: Build documentation
       run: |
         cd docs
+        pip install -r requirements.txt
         make html
     
     - name: Upload documentation artifact
