--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,11 +64,21 @@ addopts = "-v --cov=app --cov-report=term-missing"
 [tool.ruff]
 line-length = 88
 target-version = "py38"
+
+[tool.ruff.lint]
 select = ["E", "F", "I"]
 ignore = ["E203"]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "tests/*" = ["S101"]
+
+[tool.ruff.format]
+# Add any format-specific configurations here
+quote-style = "double"
+
+[tool.ruff.lint.isort]
+# Add any isort-specific configurations here
+known-first-party = ["app"]
 
 [tool.flake8]
 max-line-length = 88
