--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,28 +5,18 @@ on:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
-  schedule:
-    - cron: '0 0 * * 0'  # Weekly on Sunday
-
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
 
 jobs:
   test:
-    name: Test Python ${{ matrix.python-version }}
+    name: Test and Lint
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.9", "3.10", "3.11"]
-
     steps:
     - uses: actions/checkout@v4
     
-    - name: Set up Python ${{ matrix.python-version }}
+    - name: Set up Python 3.11
       uses: actions/setup-python@v4
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: '3.11'
         cache: 'pip'
     
     - name: Install dependencies
@@ -38,26 +28,12 @@ jobs:
     - name: Lint with flake8
       run: |
         python -m flake8 --version
-        # Only check for critical errors in the app directory
-        python -m flake8 app/ --select=E9,F63,F7,F82 --show-source --statistics
+        python -m flake8 app/ --show-source --statistics
     
-    - name: Lint with ruff
+    - name: Run tests with pytest
       run: |
-        ruff check .
-        ruff format --check .
+        python -m pytest -v
     
-    - name: Type checking with mypy
-      run: |
-        mypy .
-    
-    - name: Run tests with coverage
-      run: |
-        pytest --cov=app --cov-report=term
-    
-    - name: Install package in development mode
-      run: |
-        pip install -e .[dev]
-
     - name: Build documentation
       run: |
         cd docs
